--- a/Tests/Acme.CommonTest/Acme.CommonTest.csproj
+++ b/Tests/Acme.CommonTest/Acme.CommonTest.csproj
@@ -15,5 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Acme.Common\Acme.Common.csproj" />
+    <ProjectReference Include="..\..\ACM.BL\ACM.BL.csproj" />
   </ItemGroup>
 </Project>
